--- a/index.html
+++ b/index.html
@@ -52,15 +52,13 @@ Here we generate all the tags.
   {% for post in site.posts %}
   {% if post.tags contains tag %}
   <li>
-    <h3>
       <a href="{{ post.url }}">
         {{ post.title }}
         <small>{{ post.date | date_to_string }}</small>
       </a>
-      {% for tag in post.tags %}
+      <!--{% for tag in post.tags %}
       <a href="/blog/tag/#{{ tag | slugify }}">{{ tag }}</a>
-      {% endfor %}
-    </h3>
+      {% endfor %}-->
   </li>
   {% endif %}
   {% endfor %}
