--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@ Here we generate all the tags.
   <li>
       <a href="{{ post.url }}">
         {{ post.title }}
-        <small>{{ post.date | date_to_string }}</small>
       </a>
+      - {{ post.date | date: "%b %-d, %Y" }}
       <!--{% for tag in post.tags %}
       <a href="/blog/tag/#{{ tag | slugify }}">{{ tag }}</a>
       {% endfor %}-->
