Update header message
Update header message

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 layout: default
 ---
 
-<p style="margin-bottom:2em;">Huge <a href="https://twitter.com/hashtag/Nintendo?src=hash" target="_blank">#Nintendo</a>, <a href="https://twitter.com/hashtag/Sega?src=hash" target="_blank">#Sega</a>, <a href="https://twitter.com/hashtag/Commodore?src=hash" target="_blank">#Commodore</a> and <a href="https://twitter.com/hashtag/Atari?src=hash" target="_blank">#Atari</a> fans. We celebrate <a href="https://twitter.com/hashtag/gamingmemories?src=hash" target="_blank">#gamingmemories</a>, <a href="https://twitter.com/hashtag/retrogaming?src=hash" target="_blank">#retrogaming</a> and <a href="https://twitter.com/hashtag/retrocomputing?src=hash" target="_blank">#retrocomputing</a>! You can follow us on Twitter <a href="https://twitter.com/retrorabble" target="_blank">@retrorabble</a></p>
+<p style="margin-bottom:2em;">Huge <a href="https://twitter.com/hashtag/Nintendo?src=hash" target="_blank">#Nintendo</a>, <a href="https://twitter.com/hashtag/Sega?src=hash" target="_blank">#Sega</a>, <a href="https://twitter.com/hashtag/Commodore?src=hash" target="_blank">#Commodore</a> and <a href="https://twitter.com/hashtag/Atari?src=hash" target="_blank">#Atari</a> fans. We celebrate <a href="https://twitter.com/hashtag/gamingmemories?src=hash" target="_blank">#gamingmemories</a>, <a href="https://twitter.com/hashtag/retrogaming?src=hash" target="_blank">#retrogaming</a> and <a href="https://twitter.com/hashtag/retrocomputing?src=hash" target="_blank">#retrocomputing</a>!
+
+You can follow us on Twitter <a href="https://twitter.com/retrorabble" target="_blank">@retrorabble</a></p>. Please tweet us if you'd like to join our community and contribute!
 
 <h1>Posts</h1>
 
